--- a/leak-detector-notifier.yaml
+++ b/leak-detector-notifier.yaml
@@ -15,25 +15,37 @@ blueprint:
           multiple: true
     actions:
       name: Actions
-      description: Notifications or similar to be run. Use {{ trigger.event.data.new_state.attributes.friendly_name
-        }} in a message for a friendly name of the sensor.
+      description: >
+        Notifications or similar to be run.
+        Use {{ trigger.event.data.new_state.attributes.friendly_name }} in a message
+        for a friendly name of the sensor.
       selector:
         action: {}
+
 trigger:
-- event_data: {}
-  event_type: state_changed
-  platform: event
+  - platform: event
+    event_type: state_changed
+    event_data: {}
+
 condition:
-- condition: template
-  value_template: '{{ trigger.event.data.new_state.attributes.device_class == "moisture"
-    }}'
-- condition: template
-  value_template: '{{ trigger.event.data.new_state.state == "on" }}'
-- condition: template
-  value_template: >
-    {% set excluded = excluded_sensors %}
-    {{ trigger.event.data.entity_id not in excluded }}
+  # Only moisture sensors
+  - condition: template
+    value_template: >
+      {{ trigger.event.data.new_state is not none
+         and trigger.event.data.new_state.attributes.device_class == "moisture" }}
+
+  # Only when they turn "on" (wet)
+  - condition: template
+    value_template: >
+      {{ trigger.event.data.new_state.state == "on" }}
+
+  # Exclude selected sensors
+  - condition: template
+    value_template: >
+      {{ trigger.event.data.entity_id not in !input excluded_sensors }}
+
 action:
-- choose: []
-  default: !input actions
+  - choose: []
+    default: !input actions
+
 mode: single
