Fix input variable reference in notifier YAML

--- a/leak-detector-notifier.yaml
+++ b/leak-detector-notifier.yaml
@@ -44,7 +44,7 @@ condition:
   # Exclude selected sensors
   - condition: template
     value_template: >
-      {{ trigger.entity_id not in !input excluded_sensors }}
+      {{ trigger.entity_id not in input_excluded_sensors }}
 
 action:
   - choose: []
