--- a/leak-detector-notifier.yaml
+++ b/leak-detector-notifier.yaml
@@ -41,7 +41,14 @@ trigger:
     to: "on"
 
 condition:
-  # Exclude selected sensors
+  - condition: template
+    value_template: >
+      {{ trigger.to_state.attributes.device_class == "moisture" }}
+
+  - condition: template
+    value_template: >
+      {{ trigger.to_state.state == "on" }}
+
   - condition: template
     value_template: >
       {{ trigger.entity_id not in input_excluded_sensors }}
